[tool.poetry]
name = "trainer"
version = "0.1.0"
description = ""
authors = ["Craig  <ctr26@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "3.7"
torch = "1.9.0"
matplotlib = "^3.4.3"
Pillow = "^8.4.0"
gcsfs = "^2021.10.1"
tensorboard = "^2.7.0"
pytorch_lightning = "^1.4.9"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
